--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -2,12 +2,28 @@
 
 body 
   background-color: $black_l
-.row
+.root_container
   width: 100%
+  height: 100vh
   display: flex
   justify-content: flex-start
 main
   width: 100%
   height: 100%
+
+.custom_scroll
+  &::-webkit-scrollbar-track
+    box-shadow: inset 0 0px 2px rgba(#fff,.5)
+    background-color: transparent
+    border-radius: 5px
+  &::-webkit-scrollbar
+    width: 6px
+    background-color: transparent
+    border-radius: 5px
+  &::-webkit-scrollbar-thumb
+    background-color: $mint
+    transform: translateX(3px)
+    border-radius: 5px
+@import 'loader'
 @import 'sidebar'
 @import 'header'
