--- a/src/sass/_config.sass
+++ b/src/sass/_config.sass
@@ -7,6 +7,8 @@ $olive_l: #f0f6ea
 $sun: #ffab17
 $sun_l: #fef6eb
 
+
+@import '../fonts/font-awesome-4.7.0/css/font-awesome.min'
 *
   box-sizing: border-box
   margin: 0
