--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -24,6 +24,7 @@ main
     background-color: $mint
     transform: translateX(3px)
     border-radius: 5px
+@import 'UI'
 @import 'loader'
 @import 'sidebar'
 @import 'header'
